# tree-sitter-typhoon

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-typhoon.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_typhoon/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTyphoon/: typhoon.h
bindings/swift/TreeSitterTyphoonTests/: TreeSitterTyphoonTests.swift
src/: grammar.json  node-types.json  scanner.c
test/corpus/: declaration.txt  pattern.txt
