[package]
name = "tree-sitter-typhoon"
description = "Typhoon grammar for tree-sitter"
version = "0.0.1"
authors = ["koneko096 <afrizalf96@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "typhoon"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/koneko096/tree-sitter-typhoon"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.8"
